--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <h1>Cubra sua página.</h1>
     <p class="lead">A capa é um modelo de uma página para construir páginas iniciais simples e bonitas. Baixe, edite o texto e adicione sua própria foto de fundo em tela cheia </p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
+      <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Saiba mais</a>
     </p>
   </main>
 
